[package]
name = "Typestorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
ncurses = "5.101.0"
rand = "0.8.5"
terminal_size = "0.2.5"
